fields crud done

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Database
-DATABASE_URL="postgresql://user:password@localhost:5432/takwirti"
+DATABASE_URL="postgresql://user:password@localhost:5432/database_name"
 
 # JWT Configuration
 JWT_ACCESS_SECRET=your-super-secret-access-key-min-32-chars-change-this-in-production
